<resources>
    <string name="app_name">todo rimender</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="log">Login</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="halo_selamat_datang">Halo, Selamat datang!</string>
    <string name="tulis_tugas_anda">Tulis tugas anda</string>
    <string name="_23_september_2025">📅 23 September 2025</string>
    <string name="judul_tugas">Judul tugas</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tambah">Tambah</string>
    <string name="tulis_tugas_anda_di_bawah">Tulis tugas anda di bawah</string>
    <string name="tanggal_sekarang">Tanggal sekarang</string>
    <string name="pilih_tanggal_waktu_deadline"><![CDATA[Pilih Tanggal & Waktu Deadline]]></string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="Judul_tugas">Judul tugas</string>
    <string name="deskripsi_tugas">Deskripsi tugas</string>
    <string name="to_do_rimender">To Do Rimender</string>
    <string name="logout">Logout</string>
    <string name="tenggat_tanpa_deadline">Tenggat: Tanpa Deadline</string>
    <string name="todo">TODO</string>
</resources>