<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@drawable/background">

    <ImageView
        android:background="@drawable/p"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginBottom="50dp"/>


    <EditText
        android:id="@+id/edtRegUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="#3F51B5"
        android:textSize="20sp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#0016AB"/>

    <EditText
        android:id="@+id/edtRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:backgroundTint="#0016AB"
        android:textColorHint="#3F51B5"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnRegisterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="#0016AB"/>

    <Button
        android:id="@+id/btnBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:layout_marginTop="12dp"
        android:backgroundTint="#0016AB"/>

</LinearLayout>
