<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTodoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_tugas"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/tvTodoDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi_tugas"
                android:textSize="14sp"
                android:textColor="#666666"/>


            <TextView
                android:id="@+id/tvTodoDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenggat_tanpa_deadline"
                android:textSize="12sp"
                android:textColor="#3F51B5"
                android:layout_marginTop="4dp"/>

        </LinearLayout>


        <ImageButton
            android:id="@+id/btnEditTodo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/edit"
            app:tint="#03A9F4" />


        <ImageButton
            android:id="@+id/btnDeleteTodo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/delete"
            app:tint="#0024D5" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
